# devices/backend/src/app/api/v1/endpoints/__init__.py
@@ -1,10 +1,8 @@
-from . import users, locations, screenshots, keystrokes, devices
+from . import users, screenshots, devices
 
 __all__ = [
 	"users",
-	"locations",
 	"screenshots",
-	"keystrokes",
 	"devices",
 ]
 
